--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
     "encoding": "^0.1.13",
-    "next": "15.3.3",
+    "next": "^16.1.3",
     "postcss": "^8.5.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
